--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       If you have questions or need help, contact us at:
       <br />
       <strong>Email:</strong>
-      <a href="mailto:support@daypilotapp.com">support@daypilotapp.com</a>
+      <a href="mailto:matt.harris9@yahoo.com">matt.harris9@yahoo.com</a>
     </p>
 
     <h2>Privacy Policy</h2>
